# rustcrypto-MACs-sgx

./: .drone.yml  Cargo.toml
cmac/: Cargo.toml
cmac/tests/: lib.rs
daa/: Cargo.toml
hmac/: Cargo.toml
pmac/: Cargo.toml
sgx/MACs-sgx-test/enclave/: Cargo.toml
