[package]
name = "daa"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "Implementation of Data Authentication Algorithm (DAA)"
documentation = "https://docs.rs/daa"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "daa", "fips"]

[dependencies]
crypto-mac = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
des = { git = "https://github.com/mesalock-linux/rustcrypto-block-ciphers-sgx" }

[dev-dependencies]
#crypto-mac = { version = "0.7", features = ["dev"] }
