[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
cmac = { path = "../../../cmac" }
daa = { path = "../../../daa" }
hmac = { path = "../../../hmac" }
pmac = { path = "../../../pmac" }
aes = { git = "https://github.com/mesalock-linux/rustcrypto-block-ciphers-sgx" }
crypto-mac = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx", features = ["dev"] }
md-5 = { git = "https://github.com/mesalock-linux/hashes-sgx" }
sha2 = { git = "https://github.com/mesalock-linux/hashes-sgx" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tunittest = {rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git" }
